--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,11 +1,11 @@
 repos:
   - repo: https://github.com/sourcery-ai/sourcery
-    rev: v1.1.0 # Get the latest tag from https://github.com/sourcery-ai/sourcery/tags
+    rev: v1.2.0 # Get the latest tag from https://github.com/sourcery-ai/sourcery/tags
     hooks:
       - id: sourcery
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v0.9.2
+    rev: v4.4.0
     hooks:
       - id: check-added-large-files
         args: [ '--maxkb=500' ]
@@ -15,19 +15,19 @@ repos:
       - id: check-symlinks
       - id: debug-statements
     
-  - repo: local
+  - repo: https://github.com/pycqa/isort
+    rev: 5.12.0
     hooks:
       - id: isort
-        name: isort-local
-        entry: isort
-        language: python
-        types: [ python ]
-        exclude: .+/(dist|.venv|venv|build)/.+
-        pass_filenames: true
-      - id: black
-        name: black-local
-        entry: black
-        language: python
-        types: [ python ]
-        exclude: .+/(dist|.venv|venv|build)/.+
-        pass_filenames: true
+        name: isort (python)
+  
+  - repo: https://github.com/psf/black
+    rev: 23.3.0
+    hooks:
+    - id: black
+      language_version: python3.9
+
+  - repo: https://github.com/pycqa/flake8
+    rev: 6.0.0
+    hooks:
+    - id: flake8
